--- a/src/components/portfolio/styles.css
+++ b/src/components/portfolio/styles.css
@@ -1,39 +1,24 @@
 .swiper-slide {
   text-align: center;
   font-size: 18px;
-
-  /* Center slide text vertically */
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  -webkit-justify-content: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  -webkit-align-items: center;
-  align-items: center;
-
-  background-size: cover;
-  background-position: center;
+  width: auto;
 }
 
 .swiper-slide img {
-  display: block;
-  object-fit: cover;
+  height: 30vw;
 }
 
-.mySwiper .swiper-slide {
-  width: 30%;
-  height: 100%;
+.swiper-scrollbar-drag {
+  background: rgb(255, 255, 255, 70%);
 }
 
+.swiper-pagination-bullet {
+  width: 20px;
+  height: 20px;
+  line-height: 20px;
+  background: #000;
+}
 
-.swiper-slide img {
-  display: block;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+.swiper-pagination-bullet-active {
+  background: #fff;
 }
